FIxes, notes